--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,11 +31,9 @@ header {
 
 .logo {
     margin: 32px 20px 32px 0;
-    float: left;
 }
 
 .main_menu, .side_menu {
-    float: left;
     padding: 2rem;
     line-height: 50px;
 }
@@ -102,12 +100,13 @@ h1 {
 
 /* /header */
 
-/* css main */
+/* css graybar */
 
 .graybar_box {
     background-color: lightgray;
     height: 200px;    
     text-align: center;
+    line-height: 50px;
     position: relative;
 }
 
@@ -117,3 +116,52 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%)
 }
+
+.graybar_cont>p {
+    color: gray;
+}
+/* /css graybar */
+
+/* css main */
+.columns {
+    width: calc(100% / 3 -80px);
+    margin-top: 40px;
+}
+
+.columns> aside, article {
+    width: 30%;
+    text-align: center;
+}
+
+.main_article {
+    margin: 0 40px;
+}
+
+.col_img {
+    width: 100%;
+    height: 200px;
+}
+
+h3 {
+    color: rgb(124, 187, 2);
+    font-size: 30px;
+    margin: 30px 0;
+}
+
+h3::after {
+    content: "";
+    width: 80px;
+    height: 1px;
+    background-color: gray;
+    display: block;
+    margin: 40px 180px;
+}
+
+/* css utility */
+
+
+
+.float {
+    float: left;
+}
+
